# Learn_OpenGL_and_Managers

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md
UML/: classs.pu
emscripten/: CMakeLists.txt
lib/glad/: CMakeLists.txt  glad.c  glad.h
lib/thuw/: VAO.hpp  Vec.hpp  Vertices.hpp
lib/thuw/Attribute/: Point.hpp
lib/thuw/Buffer/: EBO.hpp  VBO.hpp
lib/thuw/Exception/: throw_if.hpp
lib/thuw/GL/: VAO.hpp
lib/thuw/GL/Buffer/: EBO.hpp  VBO.hpp
lib/thuw/GL/Shader/: Compile.hpp  Fragment.hpp  Program.hpp  Vertex.hpp
lib/thuw/Geometry/: Geometry.hpp  Point.hpp  Triangle.hpp
lib/thuw/Geometry/Attribute/: Point.hpp
lib/thuw/Keyboard/: Key.hpp  KeyMap.hpp  Keyboard.hpp
lib/thuw/Math/: Math.hpp
lib/thuw/Math/Matrix/: Matrix.hpp
lib/thuw/Math/Vec/: Vec.hpp  Vertices.hpp
lib/thuw/Scene/: Concept.hpp  Initilizer.hpp  List.hpp  Manager.hpp  Render.hpp  Scene.hpp  Transitioner.hpp
lib/thuw/Shader/: Compile.hpp  Fragment.hpp  Program.hpp  Vertex.hpp
lib/thuw/Shapes/Triangle/: Triangle.hpp
lib/thuw/Signal/: Signal.hpp
lib/thuw/Vertex/: Shader.hpp  VBO.hpp
lib/thuw/Window/: Window.hpp
src/: main.cpp
src/First/: FirstScene.hpp
src/Triangle/: TriangleScene.hpp
src/Triangle/shader/: triangle.vert
src/testScene/: TestScene.hpp
